# NativePlayer

./: README  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/media/opensladuio/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/android/media/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  PlayCallback.cpp  PlayCallback.h  RecordBuffer.cpp  RecordBuffer.h  native-lib.cpp
app/src/main/java/cn/hash/mm/audioplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lamelib/: build.gradle
lamelib/src/main/: AndroidManifest.xml
lamelib/src/main/cpp/: CMakeLists.txt  lame-lib.cpp
lamelib/src/main/res/values/: strings.xml
nativelib/: CMakeLists.txt  build.gradle
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
nativelib/src/main/cpp/audio/: AudioController.cpp  AudioController.h
nativelib/src/main/cpp/bridge/: JavaBridge.cpp  JavaBridge.h
nativelib/src/main/cpp/ffmpeg/: FFmpegController.cpp  FFmpegController.h
nativelib/src/main/cpp/include/libswresample/: swresample.h
nativelib/src/main/cpp/javabridge/: JavaBridge.cpp  JavaBridge.h
nativelib/src/main/cpp/log/: AudioLog.h
nativelib/src/main/cpp/queue/: BufferQueue.cpp  BufferQueue.h
nativelib/src/main/cpp/soundtouch/SoundTouch/: AAFilter.h  FIFOSampleBuffer.cpp  FIRFilter.h  InterpolateCubic.cpp  InterpolateCubic.h  InterpolateLinear.h  InterpolateShannon.cpp  InterpolateShannon.h  RateTransposer.h  SoundTouch.cpp  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86.cpp  sse_optimized.cpp
nativelib/src/main/cpp/soundtouch/include/: FIFOSampleBuffer.h
nativelib/src/main/cpp/splitpack/entity/: PcmSplitEntity.cpp  PcmSplitEntity.h
nativelib/src/main/cpp/splitpack/queue/: PcmSplitQueue.cpp  PcmSplitQueue.h
nativelib/src/main/cpp/status/: PlayStatus.cpp  PlayStatus.h
nativelib/src/main/java/cn/hash/mm/nativelib/: Demo.java  PlayController.java
nativelib/src/main/java/cn/hash/mm/nativelib/bean/: AudioInfoBean.java  MuteType.java
nativelib/src/main/java/cn/hash/mm/nativelib/listener/: OnCurrentAudioDbListener.java  OnPauseResumeListener.java  OnPlayCompleteListener.java  OnPlayErrorListener.java  OnPlayLoadListener.java  OnPrepareListener.java  OnPrepareLoadListener.java  OnRecordAudioTimeListener.java  OnTimeInfoListener.java
nativelib/src/main/java/cn/hash/mm/nativelib/util/: NativeLibLogUtil.java  ThreadPool.java  TimeUtil.java
nativeplayer_lib/: CMakeLists.txt  build.gradle
nativeplayer_lib/src/main/: AndroidManifest.xml
nativeplayer_lib/src/main/cpp/: AVPacketQueue.cpp  AVPacketQueue.h  AVPlayStatus.cpp  AVPlayStatus.h  AndroidLog.h  CallJavaBridge.cpp  CallJavaBridge.h  SimpleAvCodec.cpp  SimpleAvCodec.h  native-lib.cpp
nativeplayer_lib/src/main/res/values/: strings.xml
(+17 files in other folders)
